# agentic-deployment-engine

./: .gitignore  AGENT_BUILDER_GUIDE.md  CLAUDE.md  README.md  SSH_TESTING_GUIDE.md  demo_multi_agent.py  pyproject.toml  test_validation_suite.py  test_weather_simple.py
.claude/: ralph-loop.local.md
.github/workflows/: publish.yml  test.yml
agents/: controller_agent.py  maps_agent.py  weather_agent.py
docs/: ARCHITECTURE.md  ARCHITECTURE_PATTERNS.md  ARCHITECTURE_PATTERNS_COMPARISON.md  ARCHITECTURE_PATTERNS_SIMPLE.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_UPGRADE.md  ARCHITECTURE_VISUAL_INDEX.md  DEMO_LOGS_SUMMARY.md  FINAL_STATUS.md  FIXED_FOR_SDK_MAIN.md  JOBS_SYSTEM_SUMMARY.md  PATTERNS.md  README.md  SDK_MCP_FIX_PLAN.md  SDK_TOOLS_ISSUE_ANALYSIS.md  SECURITY.md  SSH_TEST_READY.md  SSH_TEST_SUCCESS.md  TEST_ANALYSIS.md  TEST_RESULTS.md  UPGRADE_SUMMARY.md  USABILITY_TESTS.md  agentic_development_guide.md  building-agents.md  configuration.md  getting-started.md  interactive-cli.md  job-definitions.md  mcp-transport.md  mcp_sdk_transport_deep_dive.md  ssh-deployment.md  testing.md  troubleshooting.md
docs/archive/: COMPLETE_IMPLEMENTATION_SUMMARY.md  REFINED_ARCHITECTURE.md  SSH_IMPLEMENTATION_COMPLETE.md
docs/images/: 01_hub_and_spoke.mmd  02_pipeline.mmd  03_peer_to_peer.mmd  04_hierarchical.mmd  05_blackboard.mmd  06_marketplace.mmd  07_event_driven.mmd  08_decision_tree.mmd  09_current_system.mmd  README.md  agent_architecture.mmd  architecture_patterns_simple.mmd  final_patterns.mmd  hierarchical.mmd  hub_spoke.mmd  patterns_2x2.mmd  patterns_clear.mmd  patterns_minimal.mmd  peer_to_peer.mmd  pipeline.mmd
examples/: EXPLORATION_SCRATCH.md  EXPLORATION_SCRATCH_V2.md  NIGHT_SHIFT_SCRATCH.md  README.md  __init__.py  custom_coordinator.py
examples/Context Management A2A/: CONTEXT_MANAGEMENT.md  README.md  deployment.yaml  requirements.txt  run_agents.py  test_context.py  test_simple.txt
examples/Context Management A2A/.claude/: settings.local.json
examples/Context Management A2A/agents/: __init__.py  context_agent.py
examples/Example-A2A-Carmen/: A2A_LIFE_OF_TASK_IMPLEMENTATION_GUIDE.md  README.md  base_a2a_task_agent.py  deployment.yaml  requirements.txt  run_agents.py  simple_test.py  test_agents.py  test_task_lifecycle.py
examples/Example-A2A-Carmen/.claude/: settings.local.json
examples/Example-A2A-Carmen/agents/: __init__.py  finance_agent.py  finance_agent_task.py  general_agent.py  general_agent_task.py  math_agent.py  math_agent_task.py  search_agent.py  search_agent_task.py
examples/Example-A2A-Carmen/executors/: __init__.py  finance_executor.py  general_executor.py  math_executor.py  search_executor.py
examples/agents/: __init__.py  astronomy_stdio_agent.py  calculator_agent.py  complexity_agent.py  context7_agent.py  controller_agent.py  fact_checker_agent.py  linter_agent.py  maps_agent.py  research_coordinator_agent.py  restricted_agent.py  review_coordinator_agent.py  searcher_agent.py  security_agent.py  stock_agent.py  summarizer_agent.py  weather_agent.py
examples/demos/: custom_coordinator.py  demo_multi_agent.py
examples/jobs/: code-review-pipeline.yaml  collaborative-mesh.yaml  context7-test.yaml  cross-node-minimal.yaml  cross-node-test.yaml  financial-analysis.yaml  gemini-test.yaml  large-mesh.yaml  mixed-providers.yaml  ollama-test.yaml  permission-test.yaml  research-assistant.yaml  simple-weather.yaml  ssh-homelab-all.yaml  ssh-hybrid.yaml  ssh-localhost.yaml  ssh-multi-host.yaml  stdio-mcp-test.yaml  stock-workflow.yaml
examples/mcp_servers/: __init__.py  astronomy_stdio_server.py  weather_stdio_server.py
examples/tools/: __init__.py  calculator_tools.py  maps_tools.py  research_tools.py  review_tools.py  stock_tools.py  weather_tools.py
jobs/: IMPLEMENTATION_COMPLETE.md  JOB_SPECIFICATION.md  QUICK_REFERENCE.md  README.md  SSH_DEPLOYMENT_GUIDE.md
jobs/examples/: distributed-dag.yaml  hierarchical-tree.yaml  pipeline.yaml
logs/demo_multi_agent/: README.md  verify_logs.sh
scripts/: run_integration_tests.sh  setup_ssh_localhost.sh
src/: __init__.py  a2a_transport.py  agent_registry.py  base_a2a_agent.py  config.py  permissions.py  start_all.py
src/agents/: __init__.py  base.py  registry.py  sessions.py  transport.py
src/backends/: __init__.py  base.py  claude_sdk.py  crewai.py  gemini_cli.py
src/core/: __init__.py  container.py  exceptions.py  types.py
src/deployment/: __init__.py  deployer.py  loader.py  models.py  monitor.py  resolver.py
src/jobs/: __init__.py  cli.py  deployer.py  loader.py  models.py  monitor.py  registry.py  resolver.py
src/observability/: __init__.py  logging.py  semantic.py  telemetry.py
src/registry/: __init__.py  service.py
src/security/: __init__.py  auth.py  permissions.py
tests/: README.md  conftest.py  test_complete_system.py  test_full_integration.py  test_integration.py  test_job_deployment.py  test_real_weather_agent.py  test_ssh_deployment.py  test_ssh_localhost.py  test_system.py  test_unit.py
tests/integration/: __init__.py  test_cli.py  test_deployer.py  test_failure_mode_tracing.py  test_integration.py  test_loader.py  test_resolver.py  test_system.py  test_validation_suite.py
tests/unit/: __init__.py  test_a2a_transport.py  test_agent_registry.py  test_agents.py  test_auth.py  test_backends.py  test_base_a2a_agent.py  test_cli.py  test_container.py  test_core.py  test_deployer.py  test_error_paths.py  test_exceptions.py  test_loader.py  test_logging_config.py  test_mcp_tools.py  test_models.py  test_permissions.py  test_registry.py  test_registry_service.py  test_resolver.py  test_security.py  test_semantic.py  test_start_all.py  test_telemetry.py  test_tools.py
tests/usability/: README.md  __init__.py  framework.py  test_backends.py  test_complete_system.py  test_full_integration.py  test_job_deployment.py  test_observability.py  test_real_weather_agent.py  test_scenarios.py  test_ssh_deployment.py  test_ssh_localhost.py  test_tool_calls.py  test_weather_simple.py
tools/: maps_tools.py  weather_tools.py
(+4 files in other folders)
