[project]
name = "clean-mcp-a2a"
version = "0.1.0"
description = "Clean multi-agent system leveraging claude-code-sdk properly"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "a2a-sdk>=0.1.0",
    "claude-agent-sdk @ git+https://github.com/anthropics/claude-agent-sdk-python.git@main",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "paramiko>=3.0.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pyright>=1.1.350",
    "pip-audit>=2.7.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
]
crewai = [
    "crewai>=0.30.0",
    "litellm>=1.50.0",
]

[project.scripts]
# A2A agents with SDK MCP integration
weather-agent = "examples.agents.weather_agent:main"
maps-agent = "examples.agents.maps_agent:main"
controller-agent = "examples.agents.controller_agent:main"
stock-agent = "examples.agents.stock_agent:main"
calculator-agent = "examples.agents.calculator_agent:main"
restricted-agent = "examples.agents.restricted_agent:main"
# Code review pipeline agents
linter-agent = "examples.agents.linter_agent:main"
security-agent = "examples.agents.security_agent:main"
complexity-agent = "examples.agents.complexity_agent:main"
review-coordinator = "examples.agents.review_coordinator_agent:main"
# Start all agents
start-all = "src.start_all:main"
# Job deployment CLI
deploy = "src.jobs.cli:main"
# Test scripts (see tests/ for organization: unit/, integration/, usability/)
test-system = "tests.integration.test_system:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Timeout per test (in seconds) - prevents hanging CI
timeout = 30
# Test directories: tests/unit/, tests/integration/, tests/usability/
# Default runs unit tests only (fast, no external deps)
# Run integration: uv run pytest tests/integration/ -v -m integration
# Run usability: uv run pytest tests/usability/ -v -m usability
# Run all: uv run pytest tests/ -v -m "unit or integration or usability"
testpaths = ["tests/unit"]
addopts = [
    "--cov=src",
    "--cov=examples",
    "--cov-report=term-missing",
    "--cov-fail-under=65",
    "-v",
]
markers = [
    "unit: marks unit tests (mocked, no external deps)",
    "integration: marks integration tests (component coordination, may need files)",
    "usability: marks usability/e2e tests (deploy real agents, verify behavior)",
    "e2e: alias for usability tests",
    "slow: marks tests as slow",
]
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["src", "examples"]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (standard typer pattern)
]

[tool.ruff.lint.per-file-ignores]
# Specific files that need sys.path manipulation before imports
"tests/usability/test_ssh_deployment.py" = ["E402"]
"tests/usability/test_weather_simple.py" = ["E402"]
"tests/unit/test_security.py" = ["E402"]
"tests/integration/test_loader.py" = ["E402"]
"tests/integration/test_resolver.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
exclude = [
    "tests/**",  # Tests use mocks and SDK types without proper stubs
    "examples/demos/**",  # Demo files for documentation
]
reportAttributeAccessIssue = "warning"  # SDK types lack complete stubs

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true